--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         <ul class="nav__links" id="nav-links">
           <li><a href="#home">HOME</a></li>
           <li><a href="#about">ABOUT</a></li>
-          <li><a href="#service">SERVICE</a></li>
+          <li><a href="#service">SERVICES</a></li>
           <li><a href="#price">PRODUCTS</a></li>
-          <li><a href="#client">CLIENT</a></li>
-          <button class="btn">Contact Us</button>
+          <li><a href="#client">PHOTO GALLERY</a></li>
+          <button class="btn">Contact US</button>
         </ul>
       </nav>
       <div class="section__container header__container" id="home">
         <div class="header__content">
-          <h1>We Are Qualified & Professional</h1>
+          <h1>We run an organized, systematic delivery center equipped to provide innovations and solutions to our clients globally.Our supreans are ever ready to align with our clients demands.</h1>
           <div class="header__btn">
             <button class="btn">Read More</button>
           </div>
