--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </nav>
       <div class="section__container header__container" id="home">
         <div class="header__content">
-          <h1>We run an organized, systematic delivery center equipped to provide innovations and solutions to our clients globally.Our supreans are ever ready to align with our clients demands.</h1>
+          <h1>We are Qualified & Professional</h1>
           <div class="header__btn">
             <button class="btn">Read More</button>
           </div>
