--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <section class="banner__container">
       <div class="banner__card">
-        <h4 color="green">JUPITER TECH GROUP</h4>
+        <h4>JUPITER TECH GROUP</h4>
         <h5>Who We Are & What We Do?</h5>
       </div>
       <div class="banner__card">
