--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="banner__card">
         <h4>JUPITER TECH GROUP</h4>
         <h4>Who We Are & What We Do?</h4>
-        <p>We are one of the fastest growing companies in the world that provides highly efficient and result oriented engineering solutions and IT services. Our Goals is to leverage our expertise and optimize our client satisfaction.</p>
+        <h4>We are one of the fastest growing companies in the world that provides highly efficient and result oriented engineering solutions and IT services. Our Goals is to leverage our expertise and optimize our client satisfaction.</h4>
       </div>
       <div class="banner__card">
         <h4>Caring For Your Car The Way You Would.</h4>
