--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="banner__card">
         <h4>We are one of the fastest growing companies in the world that provides highly efficient and result oriented engineering solutions and IT services. </h4>
       </div>
-      <div class="banner_card">
+      <div class="banner__card">
         <h4>Our Goals is to leverage our expertise and optimize our client satisfaction.</h4>
       </div>
       
@@ -67,6 +67,16 @@
           We Have 25 Years Of Experience In This Field
         </h2>
         <p class="section__description">
+          We run an organized, systematic delivery center equipped to provide 
+          innovations and solutions to our clients globally.Our supreans are 
+          ever ready to align with our clients demands.
+          Our team of experts instigates all the demands and take appropriate 
+          measures in planning and execution of our client needs . Their words 
+          are our way to prioritize the work. Supremology being founded in 2016 
+          is a one-stop solution for global engineering solutions, IT service 
+          provider, headquartered in Novi, USA.
+
+          We connect with clients to leverage our expertise and optimize our client satisfaction and engagement . All the clients are well benefitted from the quality Solutions and consulting from us and they appreciate and behold us the best. This way we epitomize a perfect symphony of work between our clients and our results. .Supremology provides highly efficient and result oriented IT services to the overall design. Supremology boasts its quality of services at an economical rate. It also saves time in providing the solutions. The innovation of ideas will create a great way for your success and reliability for our client’s best deal over the work.
           With a rich legacy spanning 25 years, our commitment to excellence in
           car servicing is unwavering. Our seasoned team brings a wealth of
           experience to ensure your vehicle receives top-notch care. Trust in
