--- a/index.html
+++ b/index.html
@@ -104,26 +104,29 @@
           </div>
           <div class="service__card">
             <img src="assets/service-2.jpg" alt="service" />
-            <h4>Electrical system</h4>
+            <h4>Engineering Services</h4>
             <p>
-              Elevate car's electrical system to peak performance with our
-              specialized expertise.
+              Increase of the R&D capacity & maintenance support of our business 
+              partners by staffing their project teams with the highly skilled 
+              Supreans and their by adding value to the automotive and IT services.
             </p>
           </div>
           <div class="service__card">
             <img src="assets/service-3.jpg" alt="service" />
-            <h4>System Service</h4>
+            <h4>Product Innovation</h4>
             <p>
-              We utilize cutting-edge diagnostics and techniques to ensure
-              optimal condition.
+              Supremology offers experience and expertise across the entire spectrum of 
+              Embedded and IT products. These products address various architectural 
+              and organisational needs and comply with all current industrial standards.
             </p>
           </div>
           <div class="service__card">
             <img src="assets/service-4.jpg" alt="service" />
-            <h4>Engine Diagnostics</h4>
+            <h4>Offshore Development</h4>
             <p>
-              Unlock the secrets of your car's performance with state-of-the-art
-              diagnostic services.
+              To get the best IT solutions, you don’t need to be geographically near us. 
+              That’s because we offer quality offshore development center. Our offshore 
+              software solutions in embedded development guarantee cost savings.
             </p>
           </div>
         </div>
