--- a/index.html
+++ b/index.html
@@ -96,10 +96,12 @@
         <div class="service__grid">
           <div class="service__card">
             <img src="assets/service-1.jpg" alt="service" />
-            <h4>Aligned Wheel</h4>
+            <h4>Quality</h4>
             <p>
-              Experience smoother rides and extended tire life with our wheel
-              alignment service.
+              For us,it's about being the best-especially when it comes to quality.
+              Whether is is the people, the materials, the facilities or the processes 
+              we have in place - we set the highest expectations for ourselves and maintain
+              the highest standards for everything we do.
             </p>
           </div>
           <div class="service__card">
