--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </p>
         <div class="service__grid">
           <div class="service__card">
-            <img src="assets/service-1.jpg" alt="service" />
+            <img src="assets/quality.png" alt="service" />
             <h4>Quality</h4>
             <p>
               For us,it's about being the best-especially when it comes to quality.
