--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </p>
           </div>
           <div class="service__card">
-            <img src="assets/service-2.jpg" alt="service" />
+            <img src="assets/engineering_services.png" alt="service" />
             <h4>Engineering Services</h4>
             <p>
               Increase of the R&D capacity & maintenance support of our business 
