--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </p>
           </div>
           <div class="service__card">
-            <img src="assets/service-3.jpg" alt="service" />
+            <img src="assets/product_innovation.png" alt="service" />
             <h4>Product Innovation</h4>
             <p>
               Supremology offers experience and expertise across the entire spectrum of 
