--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <title>Jupiter Tech Group | Automotive Website</title>
   </head>
   <body>
@@ -76,22 +77,31 @@
           is a one-stop solution for global engineering solutions, IT service 
           provider, headquartered in Novi, USA.
 
-          We connect with clients to leverage our expertise and optimize our client satisfaction and engagement . All the clients are well benefitted from the quality Solutions and consulting from us and they appreciate and behold us the best. This way we epitomize a perfect symphony of work between our clients and our results. .Supremology provides highly efficient and result oriented IT services to the overall design. Supremology boasts its quality of services at an economical rate. It also saves time in providing the solutions. The innovation of ideas will create a great way for your success and reliability for our client’s best deal over the work.
+          We connect with clients to leverage our expertise and optimize our client 
+          satisfaction and engagement . All the clients are well benefitted from 
+          the quality Solutions and consulting from us and they appreciate and behold 
+          us the best. This way we epitomize a perfect symphony of work between our 
+          clients and our results. .Supremology provides highly efficient and result 
+          oriented IT services to the overall design. Supremology boasts its quality of 
+          services at an economical rate. It also saves time in providing the solutions. 
+          The innovation of ideas will create a great way for your success and reliability 
+          for our client’s best deal over the work.
           With a rich legacy spanning 25 years, our commitment to excellence in
           car servicing is unwavering. Our seasoned team brings a wealth of
           experience to ensure your vehicle receives top-notch care. Trust in
           our expertise to keep your car running smoothly and safely.
         </p>
-        <button class="btn">Read More</button>
+        <button><i class="fas fa-arrow-right"></i>Contact Now</button>
+        <button class="btn">Contact Now</button>
       </div>
     </section>
 
     <section class="service" id="service">
       <div class="section__container service__container">
         <p class="section__subheader">WHY CHOOSE US</p>
-        <h2 class="section__header">Great Car Service</h2>
+        <h2 class="section__header">We Spread Our Wings On The Complete Range Of Solutions</h2>
         <p class="section__description">
-          Trust us to keep your automobile running smoothly and reliably.
+         Founded in 2016, Supremology is a Global Engineering solutions & IT service provider headquartered in Bangalore, India. Supremology being a Global Engineering Services company, provides expert solutions & technology advisory in end-to-end software development & services for Automotive, IT, Industrial, Avionics & Healthcare.
         </p>
         <div class="service__grid">
           <div class="service__card">
