--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
           ever ready to align with our clients demands.
           Our team of experts instigates all the demands and take appropriate 
           measures in planning and execution of our client needs . Their words 
-          are our way to prioritize the work. Supremology being founded in 2016 
+          are our way to prioritize the work. Jupiter Tech Group being founded in 2016 
           is a one-stop solution for global engineering solutions, IT service 
-          provider, headquartered in Novi, USA.
+          provider, headquartered in Michigan, USA.
 
           We connect with clients to leverage our expertise and optimize our client 
           satisfaction and engagement . All the clients are well benefitted from 
           the quality Solutions and consulting from us and they appreciate and behold 
           us the best. This way we epitomize a perfect symphony of work between our 
-          clients and our results. .Supremology provides highly efficient and result 
+          clients and our results.Jupiter Tech Group provides highly efficient and result 
           oriented IT services to the overall design. Supremology boasts its quality of 
           services at an economical rate. It also saves time in providing the solutions. 
           The innovation of ideas will create a great way for your success and reliability 
@@ -101,7 +101,7 @@
         <p class="section__subheader">WHY CHOOSE US</p>
         <h2 class="section__header">We Spread Our Wings On The Complete Range Of Solutions</h2>
         <p class="section__description">
-         Founded in 2016, Supremology is a Global Engineering solutions & IT service provider headquartered in Bangalore, India. Supremology being a Global Engineering Services company, provides expert solutions & technology advisory in end-to-end software development & services for Automotive, IT, Industrial, Avionics & Healthcare.
+         Founded in 2016, Jupiter Tech Group is a Global Engineering solutions & IT service provider headquartered in Michigan, USA Jupiter Tech Group being a Global Engineering Services company, provides expert solutions & technology advisory in end-to-end software development & services for Automotive, IT, Industrial, Avionics & Healthcare.
         </p>
         <div class="service__grid">
           <div class="service__card">
@@ -127,7 +127,7 @@
             <img src="assets/product_innovation.png" alt="service" />
             <h4>Product Innovation</h4>
             <p>
-              Supremology offers experience and expertise across the entire spectrum of 
+              Jupiter Tech Group offers experience and expertise across the entire spectrum of 
               Embedded and IT products. These products address various architectural 
               and organisational needs and comply with all current industrial standards.
             </p>
