--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <ul class="nav__links" id="nav-links">
           <li><a href="#home">HOME</a></li>
-          <li><a href="#about">ABOUT</a></li>
+          <li><a href="#about">ABOUT US</a></li>
           <li><a href="#service">SERVICES</a></li>
           <li><a href="#price">PRODUCTS</a></li>
           <li><a href="#client">PHOTO GALLERY</a></li>
@@ -328,14 +328,27 @@
             </li>
           </ul>
         </div>
+        
         <div class="footer__col">
+          <h4>Company</h4>
+          <ul class="footer__links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Photo Gallery</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+         <div class="footer__col">
           <h4>Our Services</h4>
           <ul class="footer__links">
-            <li><a href="#">Skilled Mechanics</a></li>
-            <li><a href="#">Routine Maintenance</a></li>
-            <li><a href="#">Customized Solutions</a></li>
-            <li><a href="#">Competitive Pricing</a></li>
-            <li><a href="#">Satisfaction Guaranteed</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Photo Gallery</a></li>
+            <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
         <div class="footer__col">
