--- a/index.html
+++ b/index.html
@@ -140,28 +140,31 @@
       <div class="section__container customisation__container">
         <p class="section__subheader">OUR CUSTOMISATION</p>
         <h2 class="section__header">
-          Car Serving Matched with Great Workmanship
+          We Spread Our Wings On The Complete Range Of Solutions
         </h2>
         <p class="section__description">
-          Our dedicated team of skilled technicians and mechanics takes pride in
-          delivering top-tier servicing for your beloved vehicle.
+       Founded in 2016, Jupiter Tech Group is a Global Engineering solutions & IT service 
+          provider headquartered in Bangalore, India. Jupiter Tech Group being a Global 
+          Engineering Services company, provides expert solutions & technology advisory 
+          in end-to-end software development & services for Automotive, IT, Industrial, 
+          Avionics & Healthcare.
         </p>
         <div class="customisation__grid">
           <div class="customisation__card">
-            <h4>65</h4>
-            <p>Total Projects</p>
+            <h4>6+</h4>
+            <p>Years</p>
           </div>
           <div class="customisation__card">
-            <h4>165</h4>
-            <p>Transparency</p>
+            <h4>200+</h4>
+            <p>Developers</p>
           </div>
           <div class="customisation__card">
-            <h4>463</h4>
-            <p>Done Projects</p>
+            <h4>20+</h4>
+            <p>Customers</p>
           </div>
           <div class="customisation__card">
-            <h4>5063</h4>
-            <p>Got Awards</p>
+            <h4>5</h4>
+            <p>Projects</p>
           </div>
         </div>
       </div>
